<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <ImageView
        android:id="@+id/img_login"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp"
        android:src="@drawable/login_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_welcomeBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcomeBack"
        android:textSize="@dimen/_24ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_login" />

    <TextView
        android:id="@+id/tv_loginToYourAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/loginToYourAccount"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="@+id/tv_welcomeBack"
        app:layout_constraintStart_toStartOf="@+id/tv_welcomeBack"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcomeBack" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_enterEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        app:boxStrokeColor="@color/my_light_tertiary_container"
        app:cursorColor="@color/my_light_secondary_container"
        app:hintTextColor="@color/my_light_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_loginToYourAccount">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_enterEmail_val"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterYourEmail"
            android:inputType="textEmailAddress"
            android:textColor="@color/my_light_secondary" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_enterPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        app:boxStrokeColor="@color/my_light_tertiary_container"
        app:cursorColor="@color/my_light_secondary_container"
        app:hintTextColor="@color/my_light_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_enterEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_enterPassword_val"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterYourPassword"
            android:inputType="textPassword"
            android:textColor="@color/my_light_secondary" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/tv_forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/forgotPassword"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/et_enterPassword"
        app:layout_constraintTop_toBottomOf="@+id/et_enterPassword" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgotPassword" />

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        android:text="@string/or"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <TextView
        android:id="@+id/tv_nothaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:text="@string/donothaveanAccount"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/tv_or" />

    <TextView
        android:id="@+id/tv_createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:text="@string/createAccount"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_nothaveAccount"
        app:layout_constraintTop_toBottomOf="@+id/tv_or" />

</androidx.constraintlayout.widget.ConstraintLayout>