<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupFragment">

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_70sdp"
        android:text="@string/register"
        android:textSize="@dimen/_24ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/createYourNewAccount"
        app:layout_constraintEnd_toEndOf="@+id/tv_register"
        app:layout_constraintStart_toStartOf="@+id/tv_register"
        app:layout_constraintTop_toBottomOf="@+id/tv_register" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="@dimen/_12sdp"
        app:boxStrokeColor="@color/my_light_tertiary_container"
        app:cursorColor="@color/my_light_secondary_container"
        app:hintTextColor="@color/my_light_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name_val"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterYourName"
            android:inputType="text"
            android:textColor="@color/my_light_secondary" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        app:boxStrokeColor="@color/my_light_tertiary_container"
        app:cursorColor="@color/my_light_secondary_container"
        app:hintTextColor="@color/my_light_secondary"
        app:layout_constraintEnd_toEndOf="@+id/et_name"
        app:layout_constraintStart_toStartOf="@+id/et_name"
        app:layout_constraintTop_toBottomOf="@+id/et_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email_val"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterYourEmail"
            android:inputType="textEmailAddress"
            android:textColor="@color/my_light_secondary" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_phone"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        app:boxStrokeColor="@color/my_light_tertiary_container"
        app:cursorColor="@color/my_light_secondary_container"
        app:hintTextColor="@color/my_light_secondary"
        app:layout_constraintEnd_toEndOf="@+id/et_email"
        app:layout_constraintStart_toStartOf="@+id/et_email"
        app:layout_constraintTop_toBottomOf="@+id/et_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_phone_val"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterYourPhone"
            android:inputType="phone"
            android:textColor="@color/my_light_secondary" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        app:boxStrokeColor="@color/my_light_tertiary_container"
        app:cursorColor="@color/my_light_secondary_container"
        app:hintTextColor="@color/my_light_secondary"
        app:layout_constraintEnd_toEndOf="@+id/et_phone"
        app:layout_constraintStart_toStartOf="@+id/et_phone"
        app:layout_constraintTop_toBottomOf="@+id/et_phone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password_val"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterYourPassword"
            android:inputType="textPassword"
            android:textColor="@color/my_light_secondary" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--    <EditText-->
    <!--        android:id="@+id/et_password"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="16dp"-->
    <!--        android:ems="10"-->
    <!--        android:hint="@string/enterYourPassword"-->
    <!--        android:inputType="textPassword"-->
    <!--        app:layout_constraintEnd_toEndOf="@+id/et_phone"-->
    <!--        app:layout_constraintStart_toStartOf="@+id/et_phone"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/et_phone" />-->

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/terms"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/et_password"
        app:layout_constraintStart_toStartOf="@+id/et_password"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <Button
        android:id="@+id/btn_signUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        android:text="@string/signUp"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:text="@string/haveAnAccount"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintStart_toStartOf="@+id/btn_signUp"
        app:layout_constraintTop_toBottomOf="@+id/btn_signUp" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_6sdp"
        android:text="@string/login"
        android:textColor="@color/my_light_primary"
        android:textSize="@dimen/_13sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>